--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -1,1 +1,8 @@
 aantalFilialen={0} filialen
+required=verplicht in te vullen
+typeMismatch.java.lang.Integer=tik een getal
+typeMismatch.java.util.Date=tik een datum
+typeMismatch.java.math.BigDecimal=tik een bedrag
+methodInvocation.vanpostcode=een postcode ligt tussen 1000 en 9999
+methodInvocation.totpostcode=een postcode ligt tussen 1000 en 9999
+geenFilialen=geen filialen gevonden
