--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>mockito-all</artifactId>
             <version>[1.10, 1.99]</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>[5.1.3, 5.1.99]</version>
+        </dependency>
 
     </dependencies>
 </project>
