--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -3,6 +3,19 @@ required=verplicht in te vullen
 typeMismatch.java.lang.Integer=tik een getal
 typeMismatch.java.util.Date=tik een datum
 typeMismatch.java.math.BigDecimal=tik een bedrag
-methodInvocation.vanpostcode=een postcode ligt tussen 1000 en 9999
-methodInvocation.totpostcode=een postcode ligt tussen 1000 en 9999
 geenFilialen=geen filialen gevonden
+javax.validation.constraints.Null.message=moet leeg zijn
+javax.validation.constraints.NotNull.message=mag niet leeg zijn
+javax.validation.constraints.Min.message=moet minstens {value} zijn
+javax.validation.constraints.Max.message=mag maximaal {value} zijn
+javax.validation.constraints.Size.message=moet tussen {min} en {max} zijn
+javax.validation.constraints.Digits.message=max. {integer} voor komma en {fraction} na komma
+javax.validation.constraints.Past.message=moet in verleden liggen
+javax.validation.constraints.Future.message=moet in toekomst liggen
+javax.validation.constraints.Pattern.message=moet voldoen aan patroon {regexp}
+org.hibernate.validator.constraints.CreditCardNumber.message=moet een geldig kredietkaartnummer zijn
+org.hibernate.validator.constraints.Email.message=moet een geldig e-mail adres zijn
+org.hibernate.validator.constraints.Length.message=moet tussen {min} en {max} tekens bevatten
+org.hibernate.validator.constraints.NotBlank.message=moet meer dan enkel spaties bevatten
+org.hibernate.validator.constraints.Range.message=moet liggen tussen {min} en {max}
+be.vdab.constraints.Postcode=een postcode ligt tussen 1000 en 9999
