--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -18,5 +18,6 @@ org.hibernate.validator.constraints.Email.message=moet een geldig e-mail adres z
 org.hibernate.validator.constraints.Length.message=moet tussen {min} en {max} tekens bevatten
 org.hibernate.validator.constraints.NotBlank.message=moet meer dan enkel spaties bevatten
 org.hibernate.validator.constraints.Range.message=moet liggen tussen {min} en {max}
+org.hibernate.validator.constraints.SafeHtml.message=mag geen script bevatten
 be.vdab.constraints.Postcode=een postcode ligt tussen 1000 en 9999
 be.vdab.constraints.VanKleinerDanOfGelijkAanTot=van moet kleiner of gelijk zijn aan tot
