--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>[5.1.3, 5.1.99]</version>
         </dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>[1.8,]</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 </project>
