--- a/src/main/resources/teksten.properties
+++ b/src/main/resources/teksten.properties
@@ -4,6 +4,7 @@ typeMismatch.java.lang.Integer=tik een getal
 typeMismatch.java.util.Date=tik een datum
 typeMismatch.java.math.BigDecimal=tik een bedrag
 geenFilialen=geen filialen gevonden
+minstensEenGazonType=kies minstens 1 gazontype
 javax.validation.constraints.Null.message=moet leeg zijn
 javax.validation.constraints.NotNull.message=mag niet leeg zijn
 javax.validation.constraints.Min.message=moet minstens {value} zijn
