--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
 			<artifactId>jsoup</artifactId>
 			<version>[1.8,]</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
 
 	</dependencies>
 </project>
