--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,17 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>[5.1,]</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 </project>
