--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
 		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>[4.3.8, 4.3.99]</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
