--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>[5.1,]</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.7.2.RELEASE</version>
+        </dependency>
 
 	</dependencies>
 </project>
