34 Testen met in-memory database

--- a/pom.xml
+++ b/pom.xml
@@ -92,15 +92,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>[5.1,]</version>
+            <groupId>org.wisdom-framework</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>[2.3,]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>1.8.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
         </dependency>
 
 	</dependencies>
