--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,24 @@
             <artifactId>spring-plugin-core</artifactId>
             <version>[1.1,]</version>
         </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>[3,]</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>el-impl</groupId>
+            <artifactId>el-impl</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>[1.2,]</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 </project>
