--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.0.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>[1.8,]</version>
+        </dependency>
 
     </dependencies>
 </project>
